Fix overflow on zoom for pictures in blogposts

--- a/themes/navsite/static/css/style.css
+++ b/themes/navsite/static/css/style.css
@@ -468,6 +468,10 @@ aside.pubdate {
     word-wrap:break-word;
 }
 
+#blog img {
+    max-width: 100%;
+}
+
 /* FOOTER
 ------------------------------------------------------------------ */
 
